初期設定のデザイン

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,55 @@ body{
   z-index: 100;
   transition :opacity 1s ease-in-out;
 }
+.settings label{
+  font-size:1.2em;
+  color: #111;
+}
+.settings input,.settings textarea{
+  border-radius: 3px;
+  padding: 10px;
+  border:none;
+  width: 100%;
+}
+.settings textarea{
+  height: 5em;
+}
+.settings__title{
+  font-size:1.5em;
+  color: #111;
+    padding: 0.5em 0;/*上下の余白*/
+  border-top: solid 3px #364e96;/*上線*/
+  border-bottom: solid 3px #364e96;/*下線*/
+}
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    margin:0 auto;
+    padding: .9em 2em;
+    border: none;
+    border-radius: 25px;
+    box-shadow: 0 2px 3px rgb(0 0 0 / 25%), 0 2px 3px -2px rgb(0 0 0 / 15%);
+    background-color: #2589d0;
+    color: #fff;
+    font-weight: 600;
+    font-size: 1em;
+}
+
+.button::after {
+    transform: rotate(45deg);
+    width: 5px;
+    height: 5px;
+    margin-left: 10px;
+    border-top: 2px solid #fff;
+    border-right: 2px solid #fff;
+    content: '';
+}
+
+.button:hover {
+    background-color: #1579c0;
+}
 .line__container {
   padding:0;
 	opacity: 0;
