--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 }
 
 body{
+  box-sizing:border-box;
   margin: 0;
   padding: 0;
   font-family:-apple-system, BlinkMacSystemFont,"Hiragino Sans W3", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
@@ -107,6 +108,7 @@ body{
   position: sticky;
   top:0;
   opacity: 1;
+  z-index: 1;
 }
 
 /* 会話部分 */
@@ -256,7 +258,7 @@ align-self: end;
   margin: 0;
   width: 100%;
   background-color: #ffffff;
-  padding: 10px 0;
+  padding: 10px;
   position: sticky;
   bottom:0;
   z-index: 10;
@@ -266,7 +268,7 @@ align-self: end;
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 } 
 
 .chat__contents span{
@@ -274,7 +276,7 @@ align-self: end;
   color: #111;
 }
 .chat__input{
-  background-color:#ccc;
+  background-color:#f5f5f5;
   border-radius: 9999px;
   width:80%;
   padding: 10px; 
@@ -288,7 +290,7 @@ align-self: end;
   cursor: pointer;
 }
 .chat{
-  background-color:#ccc;
+  background-color:#f5f5f5;
   border:none;
   width: 85%;
   outline: none;
