--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ align-self: end;
   margin: 0;
   width: 100%;
   background-color: #ffffff;
-  padding: 10px;
+  padding: 10px 0;
   position: sticky;
   bottom:0;
   z-index: 10;
