高さなど微調整

--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,17 @@
 :root{
   	--background-color: #8CABD8;
 }
-
+*{
+    box-sizing:border-box;
+}
 body{
-  box-sizing:border-box;
   margin: 0;
   padding: 0;
   font-family:-apple-system, BlinkMacSystemFont,"Hiragino Sans W3", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  /*スクロールバー非表示（IE・Edge）*/
+  -ms-overflow-style: none;
+  /*スクロールバー非表示（Firefox）*/
+  scrollbar-width: none;
 }
 
 .settings {
@@ -31,6 +36,8 @@ body{
   font-size:1.2em;
   color: #111;
 }
+
+
 .settings input,.settings textarea{
   border-radius: 3px;
   padding: 10px;
@@ -47,6 +54,12 @@ body{
   border-top: solid 3px #364e96;/*上線*/
   border-bottom: solid 3px #364e96;/*下線*/
 }
+.settings__title span{
+  font-size: 1.5em;
+  padding-left:20px;
+  color:#8de055;
+}
+
 .button {
     display: flex;
     justify-content: center;
@@ -90,6 +103,7 @@ body{
 }
 
 .title__box{
+  height:54px;
   display: flex;
   justify-content: space-between;
 }
@@ -117,8 +131,9 @@ body{
   display: flex;
   flex-direction: column;
   line-height: 135%;
-    height:calc(100vh - 150px) ;
+  height:calc(100vh - 116px) ;
 }
+
 
 .line__contents.scroll {
   overflow-y: scroll;
@@ -127,7 +142,7 @@ body{
 
 /* 相手の会話 */
 .line__container .line__left {
-    width: 100%;
+      width: 100%;
     position: relative;
     display: block;
     margin-bottom: 5px;
@@ -137,24 +152,23 @@ body{
 
 /* アイコン画像 */
 .line__container .line__left figure {
-    width: 50px;
+    width: 30px;
     position: absolute;
     top: 15px;
     left: 0;
     padding: 0;
     margin: 0;
-
 }
 
 /* 正方形を用意 */
 .line__container .line__left figure img{
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
 }
 
 .line__container .line__left .line__left-text {
-  margin-left: 70px;
+  margin-left: 40px;
 }
 
 .line__container .line__left .line__left-text .name {
@@ -191,9 +205,8 @@ body{
     display: block;
     margin: 5px 0;
     max-width: 75%;
-
     margin-right: 15px;
-align-self: end;
+    align-self: end;
 }
 
 /* コメントエリア */
@@ -203,7 +216,6 @@ align-self: end;
   background-color: #8de055;
   margin: 0;
   margin-left: 80px;
-
 }
 
 /* 吹き出し */
@@ -220,11 +232,6 @@ align-self: end;
   border-bottom: 10px solid transparent;
 }
 
-/* 自分がスタンプを送る時 */
-.line__container .line__right .stamp {
-  position: relative;
-  margin-left: 80px;
-}
 
 /* 既読エリア */
 .line__container .line__right .date {
@@ -240,25 +247,12 @@ align-self: end;
   color: #333;
 }
 
-.comment__outer{
-      display: none;
-}
-.comment{
-  margin-top: 20px;
-  background-color:#555;
-  color: #ffffff;
-  border-radius: 20px;
-  text-align: center;
-  padding: 10px; 
-  font-size: 75%;
-  width: 90%;
-}
-
 .chat__outer{
   margin: 0;
+  height:62px;
   width: 100%;
   background-color: #ffffff;
-  padding: 10px 0;
+  padding: 10px 20px;
   position: sticky;
   bottom:0;
   z-index: 10;
